[tool.poetry]
name = "champlainww.ca"
version = "1.0.0"
description = "Source for the champlainww.ca landing and documentation pages."
authors = ["Malcolm Harper <mharper@crcmail.net>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.2.3"
mkdocs-material = "^8.2.3"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
pygments-pg = {git = "https://git@github.com/maharper/pygments-pg.git"}
mkdocs-redirects = "^1.2.0"
mkdocs-minify-plugin = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
